react-app/src/components/NavBar/NavBar.css
#nav-bar {
  margin: 0 auto;
  padding: 20px auto;
  background-color: var(--black1);
}

#nav-bar-list {
  margin: 0 auto;
  max-width: 75%;
  padding: 50px 0;
  display: grid;
  grid-template-columns: 3fr 5fr 3fr;
  list-style: none;
}

#nav-bar-list > * {
  display: flex;
  justify-content: center;
}

#home-button > * {
  margin: 0 auto;
  width: fit-content;
  font-family: 'Open Sans', sans-serif;
  font-size: 20px;
  font-weight: bold;
  color: var(--wildCard);
}

#home-button > *:hover {
  cursor: default;
}

.nav-bar-navlink > * {
  margin: 0 10px;
  text-decoration: none;
  color: var(--white3);
}

#login-signup {
  grid-column-start: 3;
}

.login-signup > * {
  padding: 9px 20px;
  font-size: 13.5px;
  background-color: var(--main);
  border-radius: 15px;
  transition: 0.2s;
}

.login-signup > *:hover {
  color: var(--wildCard);
  box-shadow: 1px 2px 10px var(--black2);
}

#logout {
  grid-column-start: 3;
}

#servers-container {
  margin: 0 auto;
  max-width: 75%;
}

#servers-scrollable {
  display: flex;
  overflow-x: scroll;
}

#servers-scrollable > * {
  flex-shrink: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  width: 10%;
  margin-bottom: 10px;
}

#servers-scrollable::-webkit-scrollbar-track {
  background-color: transparent;
}

#servers-scrollable::-webkit-scrollbar-thumb {
  border: 6px solid transparent;
}

